--- a/app/src/main/res/layout/layout_game.xml
+++ b/app/src/main/res/layout/layout_game.xml
@@ -2,6 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableBottom="24dp"
+        android:drawableTop="@drawable/ic_move"
+        android:gravity="center"
+        android:text="Swing Your Phone To Hit "
+        android:textSize="18sp" />
+
 
 </LinearLayout>
