added vibrator and disconnect

--- a/app/src/main/res/layout/layout_about_us.xml
+++ b/app/src/main/res/layout/layout_about_us.xml
@@ -22,13 +22,13 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@null"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_default" />
+                android:src="@drawable/saad" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
-                android:text="@string/li"
+                android:text="@string/about_saad"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
         </LinearLayout>
@@ -48,11 +48,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:layout_toLeftOf="@+id/image2"
                 android:layout_toStartOf="@id/image2"
                 android:padding="12dp"
-                android:layout_centerInParent="true"
-                android:text="@string/li"
+                android:text="@string/about_minhaj"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
@@ -64,8 +64,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
                 android:contentDescription="@null"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_default" />
+                android:scaleType="centerInside"
+                android:src="@drawable/minhaj" />
         </RelativeLayout>
 
         <View
@@ -84,16 +84,15 @@
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:adjustViewBounds="true"
                 android:contentDescription="@null"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_default" />
+                android:scaleType="centerInside"
+                android:src="@drawable/waqas" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
-                android:text="@string/li"
+                android:text="@string/about_waqas"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
         </LinearLayout>
@@ -112,11 +111,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:layout_toLeftOf="@+id/image4"
                 android:layout_toStartOf="@id/image4"
                 android:padding="12dp"
-                android:layout_centerInParent="true"
-                android:text="@string/li"
+                android:text="@string/about_nauman"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
@@ -128,8 +127,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
                 android:contentDescription="@null"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_default" />
+                android:scaleType="centerInside"
+                android:src="@drawable/naumna" />
         </RelativeLayout>
 
     </LinearLayout>
