--- a/app/src/main/res/layout/layout_game.xml
+++ b/app/src/main/res/layout/layout_game.xml
@@ -9,11 +9,23 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableBottom="24dp"
+        android:layout_marginBottom="24dp"
         android:drawableTop="@drawable/ic_move"
         android:gravity="center"
         android:text="Swing Your Phone To Hit "
         android:textSize="18sp" />
+
+
+    <TextView
+        android:id="@+id/disconnnect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="Disconnect"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 
 
 </LinearLayout>
